[gd_scene load_steps=6 format=3 uid="uid://x2fxfusfagtr"]

[ext_resource type="Script" uid="uid://c3ly4kmn5k6ym" path="res://opciones_modal.gd" id="1_y1he4"]
[ext_resource type="Texture2D" uid="uid://dqmmvff0cm4qc" path="res://assets/ui/imagenes.png" id="2_rckh6"]
[ext_resource type="Texture2D" uid="uid://v2ps6vb6emup" path="res://assets/ui/ic_volume_off_fill.png" id="3_tbubh"]
[ext_resource type="FontFile" uid="uid://bvsvwfxvm3l51" path="res://assets/fonts/Macondo/Macondo-Regular.ttf" id="4_57l0b"]
[ext_resource type="Texture2D" uid="uid://c6e1jarbejna" path="res://assets/ui/closebtn.png" id="5_n47gr"]

[node name="OpcionesModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y1he4")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_right = 1146.0
offset_bottom = 645.0
texture = ExtResource("2_rckh6")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="TextureRect2"]
layout_mode = 0
offset_left = 256.0
offset_top = 208.0
offset_right = 296.0
offset_bottom = 248.0
texture = ExtResource("3_tbubh")

[node name="TextureRect2" type="TextureRect" parent="TextureRect2"]
layout_mode = 0
offset_left = 262.0
offset_top = 323.0
offset_right = 302.0
offset_bottom = 363.0
texture = ExtResource("3_tbubh")

[node name="Titulo" type="Label" parent="."]
offset_left = 25.0
offset_top = 100.0
offset_right = 1094.0
offset_bottom = 163.0
theme_override_fonts/font = ExtResource("4_57l0b")
theme_override_font_sizes/font_size = 47
text = "Opciones"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="salir" type="TextureButton" parent="."]
offset_left = 871.0
offset_top = 92.0
offset_right = 953.0
offset_bottom = 168.0
texture_normal = ExtResource("5_n47gr")
metadata/_edit_use_anchors_ = true

[node name="lblSFX" type="Label" parent="."]
offset_left = 221.0
offset_top = 155.0
offset_right = 821.0
offset_bottom = 194.0
theme_override_fonts/font = ExtResource("4_57l0b")
theme_override_font_sizes/font_size = 32
text = "SFX"
metadata/_edit_use_anchors_ = true

[node name="SFXsLider" type="HSlider" parent="."]
custom_minimum_size = Vector2(550, 0)
offset_left = 314.0
offset_top = 219.0
offset_right = 872.0
offset_bottom = 241.0
metadata/_edit_use_anchors_ = true

[node name="MusicaSlider" type="HSlider" parent="."]
custom_minimum_size = Vector2(550, 0)
offset_left = 314.0
offset_top = 333.0
offset_right = 872.0
offset_bottom = 355.0
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 210.0
offset_top = 264.0
offset_right = 810.0
offset_bottom = 264.0
metadata/_edit_use_anchors_ = true

[node name="lblMusic" type="Label" parent="."]
offset_left = 222.0
offset_top = 266.0
offset_right = 316.0
offset_bottom = 305.0
theme_override_fonts/font = ExtResource("4_57l0b")
theme_override_font_sizes/font_size = 32
text = "Música"
metadata/_edit_use_anchors_ = true

[node name="lblScreen" type="Label" parent="."]
offset_left = 318.0
offset_top = 407.0
offset_right = 609.0
offset_bottom = 446.0
theme_override_fonts/font = ExtResource("4_57l0b")
theme_override_font_sizes/font_size = 32
text = "Resolución de Pantalla"
metadata/_edit_use_anchors_ = true

[node name="Pantalla" type="OptionButton" parent="."]
offset_left = 640.0
offset_top = 407.0
offset_right = 839.0
offset_bottom = 445.0
theme_override_fonts/font = ExtResource("4_57l0b")
metadata/_edit_use_anchors_ = true

[node name="Idioma" type="OptionButton" parent="."]
offset_left = 642.0
offset_top = 485.0
offset_right = 841.0
offset_bottom = 523.0
theme_override_fonts/font = ExtResource("4_57l0b")
metadata/_edit_use_anchors_ = true

[node name="lblIdioma" type="Label" parent="."]
offset_left = 512.0
offset_top = 484.0
offset_right = 598.0
offset_bottom = 523.0
theme_override_fonts/font = ExtResource("4_57l0b")
theme_override_font_sizes/font_size = 32
text = "Idioma"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="salir" to="." method="_on_salir_pressed"]
